--- a/project-4/css/styles.css
+++ b/project-4/css/styles.css
@@ -202,3 +202,15 @@ button {
 .lose a {
   color: var(--color-lose);
 }
+#overlay.hide {
+  display: none;
+}
+
+#game-settings {
+  margin-top: 1rem;
+}
+
+#game-settings label {
+  margin-right: 0.5rem;
+}
+
